[project]
name = "artisan-sandboxsmart"
version = "0.1.0"
description = "Wrapper for bluetooth-enabled home roaster Sandbox Smart"
requires-python = ">=3.8"
dependencies = [
    "bleak",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-asyncio",
    "black",
    "isort",
]

[project.scripts]
artisan-sandbox-cli = "artisan_sandboxsmart.cli:main"
artisan-sandbox-server = "artisan_sandboxsmart.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3